--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <title>module3 github repo</title>
 </head>
 <body>
-    <header>mohammad hossain</header>
+     <div class="blog">
+        <h3>My First Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ipsa ullam ipsam, assumenda placeat a nesciunt molestias, repellat, quam doloremque dolores. Saepe odio dicta cupiditate inventore dolore. Saepe, earum aperiam.</p>
+    </div>
+    <div class="blog">
+        <h3>My second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ipsa ullam ipsam, assumenda placeat a nesciunt molestias, repellat, quam doloremque dolores. Saepe odio dicta cupiditate inventore dolore. Saepe, earum aperiam.</p>
+    </div>
+    <div class="blog">
+        <h3>My third Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ipsa ullam ipsam, assumenda placeat a nesciunt molestias, repellat, quam doloremque dolores. Saepe odio dicta cupiditate inventore dolore. Saepe, earum aperiam.</p>
+    </div>
+    <div class="blog">
+        <h3>My Fourth Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ipsa ullam ipsam, assumenda placeat a nesciunt molestias, repellat, quam doloremque dolores. Saepe odio dicta cupiditate inventore dolore. Saepe, earum aperiam.</p>
+    </div>
+    <div>Css text model</div>
+    <ul>
+        <li>content</li>
+        <li>border</li>
+        <li>padding</li>
+        <li>margin</li>
+        <li>height & width</li>
+    </ul>
 </body>
 </html>
