--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
         <li>margin</li>
         <li>height & width</li>
     </ul>
+    <div>
+        <h3>add picture</h3>
+        <img src="/images/my profile.jpg" alt="my khoma" height="300px" width="300px">
+    </div>
 </body>
 </html>
