--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </ul>
     <div>
         <h3>add picture</h3>
-        <img src="/images/AhmedDeedat.png" alt="my & muaj khoma" height="300px" width="300px">
+        <img src="../images/my&muaz.jpg" alt="my & muaj khoma" height="300px" width="300px">
     </div>
 </body>
 </html>
