--- a/index.html
+++ b/index.html
@@ -4,35 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>module3 github repo</title>
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
-     <div class="blog">
-        <h3>My First Blog</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ipsa ullam ipsam, assumenda placeat a nesciunt molestias, repellat, quam doloremque dolores. Saepe odio dicta cupiditate inventore dolore. Saepe, earum aperiam.</p>
-    </div>
-    <div class="blog">
-        <h3>My second Blog</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ipsa ullam ipsam, assumenda placeat a nesciunt molestias, repellat, quam doloremque dolores. Saepe odio dicta cupiditate inventore dolore. Saepe, earum aperiam.</p>
-    </div>
-    <div class="blog">
-        <h3>My third Blog</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ipsa ullam ipsam, assumenda placeat a nesciunt molestias, repellat, quam doloremque dolores. Saepe odio dicta cupiditate inventore dolore. Saepe, earum aperiam.</p>
-    </div>
-    <div class="blog">
-        <h3>My Fourth Blog</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ipsa ullam ipsam, assumenda placeat a nesciunt molestias, repellat, quam doloremque dolores. Saepe odio dicta cupiditate inventore dolore. Saepe, earum aperiam.</p>
-    </div>
-    <div>Css text model</div>
-    <ul>
-        <li>content</li>
-        <li>border</li>
-        <li>padding</li>
-        <li>margin</li>
-        <li>height & width</li>
-    </ul>
-    <div>
-        <h3>add picture</h3>
-        <img src="/images/AhmedDeedat.png" alt="my & muaj khoma" height="300px" width="300px">
-    </div>
+     <div>
+        <h1> Html Table</h1>
+        <table>
+            <caption>Result</caption>
+            <thead>
+                <tr>
+                    <th>Sl</th>
+                    <th>Name</th>
+                    <th>Mark</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Mohammad</td>
+                    <td>55</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Tarif</td>
+                    <td>60</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Azam</td>
+                    <td>80</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="3">Total:3</td>
+                </tr>
+            </tfoot>
+        </table>
+     </div>
+     <div>
+        <ul>
+            <li>table: table</li>
+            <li>caption</li>
+            <li>table head:th</li>
+            <li>table head data: th</li>
+            <li>table row:tr</li>
+            <li>table data:td</li>
+            <li>table footer:tfoot</li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+     </div>
 </body>
 </html>
